# AgentLedger

./: .gitignore  AI_Agent_Runtime_开源项目构想.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  rce
.github/workflows/: ci.yml
contracts/: agentledger.runtime.v1.json
contracts/conformance/: adversarial_review.v1.json  boundary_lint.v1.json  cost_failure_attribution.v1.json  evidence_consumers.v1.json  evidence_regression.v1.json  failure_injection.v1.json  framework_adapters.v1.json  local_blob_store.v1.json  local_persistence.v1.json  mcp_adapters.v1.json  media_stream_artifacts.v1.json  official_adapters.v1.json  ops_readiness.v1.json  optional_adapters.v1.json  otlp_trace_export.v1.json  policy_approval_sandbox.v1.json  repro.v1.json  runtime_baseline.v1.json  runtime_semantics.v1.json  scheduler.v1.json  shadow.v1.json  simple_api.v1.json  static_debug_html.v1.json  storage_schema.v1.json  time_travel.v1.json  tool_schema_validation.v1.json  worker_service.v1.json
docs/: ADAPTER_CERTIFICATION.md  ADAPTER_PACKAGING.md  ADAPTER_ROADMAP.md  ADOPTION.md  ARCHITECTURE.md  BACKUP_RESTORE.md  BENCHMARKS.md  COMPARISONS.md  COMPLETE_CORE_PARITY_CHECKLIST.md  DESIGN_AND_IMPLEMENTATION.md  DISTRIBUTED_WORKERS.md  EXECUTION_BACKENDS.md  EXTENSIBILITY.md  FRAMEWORK_TEMPORAL_ADOPTION_DESIGN.md  GETTING_STARTED.md  HARNESS_STACK.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSPECTOR.md  LANGUAGE_IMPLEMENTATION_COMPARISON.md  LANGUAGE_PARITY_AUDIT.md  LANGUAGE_PARITY_MATRIX.md  LANGUAGE_QUICKSTART.md  MAINTAINER_NOTES.md  MATURITY_MODEL.md  MULTI_LANGUAGE.md  MYSQL.md  OMP_RUNTIME_ADAPTER_DESIGN.md  OPEN_SOURCE_IMPACT.md  POLICY_ENGINE.md  POSTGRES.md  QUERY_EXAMPLES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNTIME_SPEC.md  S3_MINIO.md  SECURITY_ENTERPRISE.md  STORAGE.md  USAGE.md  (+2 more)
docs/articles/: social-posts.md  what-happened-after-agent-tool-failure.zh-CN.md
docs/case-studies/: legal-agent.md
docs/zh/: ADAPTER_CERTIFICATION.md  ADAPTER_PACKAGING.md  ADAPTER_ROADMAP.md  ADOPTION.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISONS.md  COMPLETE_CORE_PARITY_CHECKLIST.md  DESIGN_AND_IMPLEMENTATION.md  EXECUTION_BACKENDS.md  EXTENSIBILITY.md  FRAMEWORK_TEMPORAL_ADOPTION_DESIGN.md  GETTING_STARTED.md  HARNESS_STACK.md  IMPLEMENTATION_STATUS.md  INSPECTOR.md  LANGUAGE_IMPLEMENTATION_COMPARISON.md  LANGUAGE_PARITY_AUDIT.md  LANGUAGE_PARITY_MATRIX.md  LANGUAGE_QUICKSTART.md  MAINTAINER_NOTES.md  MYSQL.md  OMP_RUNTIME_ADAPTER_DESIGN.md  OPEN_SOURCE_IMPACT.md  POLICY_ENGINE.md  QUERY_EXAMPLES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNTIME_SPEC.md  SECURITY_ENTERPRISE.md  STORAGE.md  USAGE.md  USE_CASES.md
examples/: README.md
examples/autogen/: basic_agent.py
examples/crewai/: basic_crew.py
examples/docs/: README.md
examples/hello_world/: hello.py
examples/inspector/: README.md  custom_viewer.py  failure_demo.py
examples/langchain/: basic_runnable.py
examples/langgraph/: basic_graph.py
examples/lint/: boundary_rules.json
examples/llamaindex/: basic_query.py
examples/mcp_context/: basic_context_server.py
examples/mcp_governance/: README.md  demo.py
examples/mcp_tool/: basic_tool.py
examples/media_stream/: basic_media_stream.py  managed_tool.py
examples/model_evidence/: README.md  demo.py
examples/omp_bridge/: README.md  demo.py
examples/openai_agents/: README.md  approval_replay.py  basic_agent.py
examples/policy/: local.policy.yaml
examples/sandbox/: command_tool.py  sandbox.yaml
examples/semantic_kernel/: basic_kernel.py
examples/side_effect_idempotency/: README.md
examples/temporal_bridge/: README.md  demo.py
examples/three_minute_demo/: README.md  demo.py
examples/tool_catalog/: basic_catalog.py
examples/transient_retry/: README.md
examples/travel_assistant/: demo.py
go/: README.md  adapters.go  blobstore.go  consumers.go  eval.go  evidence.go  failure_injection.go  go.mod  lint.go  mcp.go  official_adapters.go  omp.go  ops.go  optional_adapters.go  replay.go  repro.go  review.go  runtime.go  runtime_test.go  scheduler.go  schema.go  shadow.go  simple.go  store.go  timetravel.go  tools.go  travel_assistant  types.go  worker.go
go/.agentledger-go/: state.json
go/examples/: README.md
migrations/postgres/: 0001_initial.sql
migrations/sqlite/: 0001_initial.sql
rust/: Cargo.toml  README.md
rust/crates/agentledger-framework/: Cargo.toml  README.md
rust/crates/agentledger-framework/src/: lib.rs
rust/crates/agentledger-langfuse/: Cargo.toml  README.md
rust/crates/agentledger-langfuse/src/: lib.rs
rust/crates/agentledger-mcp/: Cargo.toml  README.md
rust/crates/agentledger-mcp/src/: lib.rs
rust/crates/agentledger-mysql/: Cargo.toml  README.md
rust/crates/agentledger-mysql/src/: lib.rs
rust/crates/agentledger-otel/: Cargo.toml  README.md
rust/crates/agentledger-otel/src/: lib.rs
rust/crates/agentledger-postgres/: Cargo.toml  README.md
rust/crates/agentledger-postgres/src/: lib.rs
rust/crates/agentledger-s3/: Cargo.toml  README.md
rust/crates/agentledger-s3/src/: lib.rs
rust/crates/agentledger-sandbox-docker/: Cargo.toml  README.md
rust/crates/agentledger-sandbox-docker/src/: lib.rs
rust/examples/: README.md  mcp_governance.rs  omp_bridge.rs  quickstart.rs  three_minute_demo.rs  travel_assistant.rs
rust/src/: lib.rs  main.rs
scripts/: audit_python_parity.py  benchmark_runtime.py  check_adapter_packages.py  check_complete_core_parity.py  check_language_parity.py
src/agentledger/: __init__.py  adapter_certification.py  adapters.py  adapters_frameworks.py  adapters_langgraph.py  adapters_mcp.py  adapters_omp.py  approval.py  backup.py  blobstore.py  blobstore_s3.py  cli.py  conformance.py  context.py  contract.py  cost.py  diff.py  eval.py  evidence.py  examples.py  failure.py  failure_injection.py  ids.py  inspector.py  jsonutil.py  lint.py  media.py  media_tools.py  model.py  policy.py  replay.py  (+17 more)
tests/: test_postgres_integration.py  test_runtime.py  test_s3_integration.py
typescript/: README.md  package.json
(+43 files in other folders)
