[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger"
version = "0.1.0"
description = "Durable execution and reliability runtime for production-grade AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["agents", "runtime", "durable-execution", "replay", "tool-governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
authors = [{name = "AgentLedger Contributors"}]
dependencies = []

[project.scripts]
agentledger = "agentledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentledger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
