[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger-runtime"
version = "1.0.0"
description = "Durable execution and reliability runtime for production-grade AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["agents", "runtime", "durable-execution", "replay", "tool-governance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{name = "AgentLedger Contributors"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/yaogdu/AgentLedger"
Repository = "https://github.com/yaogdu/AgentLedger"
Documentation = "https://github.com/yaogdu/AgentLedger#readme"
Issues = "https://github.com/yaogdu/AgentLedger/issues"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
s3 = ["boto3>=1.34"]

[project.scripts]
agentledger = "agentledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentledger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
