[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger-runtime"
version = "1.4.0"
description = "Runtime reliability layer for Agent Harness stacks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["agents", "runtime", "durable-execution", "replay", "tool-governance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{name = "AgentLedger Contributors"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/yaogdu/AgentLedger"
Repository = "https://github.com/yaogdu/AgentLedger"
Documentation = "https://github.com/yaogdu/AgentLedger#readme"
Issues = "https://github.com/yaogdu/AgentLedger/issues"

[project.optional-dependencies]
postgres = ["agentledger-postgres>=1.4,<2"]
mysql = ["agentledger-mysql>=1.4,<2"]
s3 = ["agentledger-s3>=1.4,<2"]
langgraph = ["agentledger-langgraph>=1.4,<2"]
mcp = ["agentledger-mcp>=1.4,<2"]
otel = ["agentledger-otel>=1.4,<2"]
langfuse = ["agentledger-langfuse>=1.4,<2"]
docker = ["agentledger-sandbox-docker>=1.4,<2"]
inspector = ["agentledger-inspector>=1.4.0,<2"]
all = [
  "agentledger-postgres>=1.4,<2",
  "agentledger-mysql>=1.4,<2",
  "agentledger-s3>=1.4,<2",
  "agentledger-langgraph>=1.4,<2",
  "agentledger-mcp>=1.4,<2",
  "agentledger-otel>=1.4,<2",
  "agentledger-langfuse>=1.4,<2",
  "agentledger-sandbox-docker>=1.4,<2",
  "agentledger-inspector>=1.4.0,<2",
]

[project.scripts]
agentledger = "agentledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentledger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
