[package]
name = "agentledger-runtime"
version = "1.4.1"
edition = "2021"
description = "Runtime reliability layer for Agent Harness stacks"
license = "Apache-2.0"
repository = "https://github.com/yaogdu/AgentLedger"
homepage = "https://github.com/yaogdu/AgentLedger"
documentation = "https://github.com/yaogdu/AgentLedger/tree/main/rust"
readme = "README.md"
keywords = ["agent", "runtime", "replay", "durable", "ai"]
categories = ["development-tools", "asynchronous"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "src/**",
    "examples/README.md",
    "examples/quickstart.rs",
    "examples/three_minute_demo.rs",
    "examples/travel_assistant.rs",
    "examples/mcp_governance.rs"
]

[lib]
name = "agentledger"
path = "src/lib.rs"

[features]
default = []
adapter-postgres = []
adapter-mysql = []
adapter-s3 = []
adapter-mcp = []
adapter-otel = []
adapter-langfuse = []
adapter-docker = []
adapter-framework = []
adapters-all = [
    "adapter-postgres",
    "adapter-mysql",
    "adapter-s3",
    "adapter-mcp",
    "adapter-otel",
    "adapter-langfuse",
    "adapter-docker",
    "adapter-framework",
]
