[package]
name = "agentledger-mysql"
version = "1.2.3"
edition = "2021"
description = "MySQL adapter crate for AgentLedger Runtime"
license = "Apache-2.0"
repository = "https://github.com/yaogdu/AgentLedger"
readme = "README.md"

[dependencies]
agentledger = { package = "agentledger-runtime", version = ">=1.2, <2", path = "../.." }
