[package]
name = "agentledger-otel"
version = "1.4.2"
edition = "2021"
description = "OTLP adapter crate for AgentLedger Runtime"
license = "Apache-2.0"
repository = "https://github.com/yaogdu/AgentLedger"
readme = "README.md"

[dependencies]
agentledger = { package = "agentledger-runtime", version = ">=1.4, <2", path = "../.." }

