[package]
name = "agentledger-s3"
version = "1.3.0"
edition = "2021"
description = "S3-compatible blob store adapter crate for AgentLedger Runtime"
license = "Apache-2.0"
repository = "https://github.com/yaogdu/AgentLedger"
readme = "README.md"

[dependencies]
agentledger = { package = "agentledger-runtime", version = ">=1.3, <2", path = "../.." }

